--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -435,54 +435,69 @@ body {
   /* --height | Height of list items (in pixels) */
 }
 /* GameList Item */
-.game-list__item {
+.game-list-item {
   display: flex;
   /* Pimp */
   list-style: none;
   background-color: var(--theme__background-color);
   color: #aaa;
 }
-.game-list__item--even {
+.game-list-item--even {
   /* Pimp */
   background-color: #1e1e1f
 }
-.game-list__item:hover {
+.game-list-item:hover {
   /* Pimp */
   background-color: #3c3c41;
   color: #e6e6e6;
   cursor: pointer;
 }
-.game-list__item--selected {
+.game-list-item--selected {
   /* Pimp */
   background-color: #791c76;
   color: #cecece;
 }
-.game-list__item--selected:hover {
+.game-list-item--selected:hover {
   /* Pimp */
   background-color: #a72aa2;
   color: #e6e6e6;
 }
 /* GameList Item Thumb */
-.game-list__item__thumb {
+.game-list-item__thumb {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
-/* GameList Item Title */
-.game-list__item__right {
+/* GameList Item Right */
+.game-list-item__right {
+  --padding: calc(0.1px * var(--height));
   flex: 1;
   overflow: hidden;
-  padding: calc(0.1px * var(--height));
+  padding: var(--padding);
+  padding-left: calc(3 * var(--padding));
 }
-.game-list__item__right__title {
+.game-list-item__right__title {
   font-size: calc(0.384px * var(--height));
   white-space: nowrap;
   /* Pimp */
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.game-list__item__right__genre {
+.game-list-item__right__genre {
   font-size: calc(0.256px * var(--height));
+}
+.game-list-item__right__icons {
+  position: absolute;
+  bottom: var(--padding);
+  right: var(--padding);
+}
+.game-list-item__right__icons__icon {
+  --size: calc(0.256px * var(--height));
+  width: var(--size);
+  height: var(--size);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 /* GameList NoGames */
 .game-list__no-games {
@@ -502,32 +517,32 @@ body {
   /* --height | Height of grid items (in pixels) */
 }
 /* GameList Item */
-.game-grid__item {
+.game-grid-item {
   /* Pimp */
   list-style: none;
   color: #aaa;
 }
-.game-grid__item:hover {
+.game-grid-item:hover {
   /* Pimp */
   background-color: #3c3c41;
   color: #e6e6e6;
   cursor: pointer;
 }
-.game-grid__item--selected {
+.game-grid-item--selected {
   /* Pimp */
   background-color: #791c76;
   color: #cecece;
 }
-.game-grid__item--selected:hover {
+.game-grid-item--selected:hover {
   /* Pimp */
   background-color: #a72aa2;
   color: #e6e6e6;
 }
 /* GameList Item Thumb */
-.game-grid__item__thumb {
+.game-grid-item__thumb {
   padding: calc(var(--width) * 0.0025rem);
 }
-.game-grid__item__thumb__image {
+.game-grid-item__thumb__image {
   width: 100%;
   height: 100%;
   background-size: contain;
@@ -539,14 +554,24 @@ body {
   border: 1px solid #141417;
   box-shadow: 0px 2px 4px 0px #09090a;
 }
+.game-grid-item__thumb__icons {
+  padding: calc(0.001rem * var(--width));
+}
+.game-grid-item__thumb__icons__icon {
+  width: calc(0.009rem * var(--width));
+  height: calc(0.009rem * var(--width));
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 /* GameList Item Title */
-.game-grid__item__title {
+.game-grid-item__title {
   padding: calc(var(--width) * 0.001rem);
   text-align: center;
   /* Pimp */
   font-weight: bold;
 }
-.game-grid__item__title__text {
+.game-grid-item__title__text {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
