--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -545,6 +545,7 @@ body {
 .game-grid-item__thumb__image {
   width: 100%;
   height: 100%;
+  position: relative;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -555,11 +556,15 @@ body {
   box-shadow: 0px 2px 4px 0px #09090a;
 }
 .game-grid-item__thumb__icons {
+  width: 100%;
   padding: calc(0.001rem * var(--width));
+  position: absolute;
+  bottom: 0;
 }
 .game-grid-item__thumb__icons__icon {
   width: calc(0.009rem * var(--width));
   height: calc(0.009rem * var(--width));
+  float: right;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
