+ Add IGameInfo properties "id" and "notes" and made the parser parse them + Center the check boxes in the BrowsePage sidebar

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -428,6 +428,9 @@ body {
   font-weight: bold;
   margin-bottom: 0;
 }
+.browse-sidebar__row__check-box {
+  vertical-align: middle;
+}
 
 /* GameList */
 .game-list {
