+ Add "Show Extreme" toggle to the Header (that is synced with the preferences, and updates the llist/grid when clicked) + Refractor the games filter/order code from BrowsePage to the new file "GameFilter"

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -289,6 +289,19 @@ body {
   color: #c00;
   font-family: monospace, monospace;
 }
+/** */
+.header__extreme {
+  display: inline-block;
+  white-space: nowrap;
+  padding: 0.6em;
+  padding-top: 0;
+}
+.header__extreme__text {
+  display: inline;
+}
+.header__extreme__toggle {
+  vertical-align: middle;
+}
 
 
 /* ------ Footer ------ */
