--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -142,6 +142,7 @@ body {
 /* ------ TitleBar ------ */
 .title-bar {
   display: flex;
+  flex: 0 0 auto;
   width: 100%;
   height: 18px;
   margin-top: 4px;
