+ Add under-the-hood way to disable the editing of games and additional applications (BrowseSidebar's state.editDisabled)

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -506,7 +506,7 @@ body {
   overflow: hidden;
   white-space: nowrap;
 }
-.browse-sidebar__row--additional-applications-header :last-child {
+.browse-sidebar__row--additional-applications-header :not(:first-child) {
   float: right;
 }
 .browse-sidebar__row--additional-applications-name {
