--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -389,9 +389,31 @@ body {
   overflow: auto;
 }
 .about-page__inner {
+  display: flex;
+  flex-direction: column;
   width: 35em;
+  height: 100%;
   margin: 0 auto;
-  overflow: hidden;
+}
+.about-page__top {
+  flex: 1 0 auto;
+}
+.about-page__bottom {
+  flex: 0 0 auto;
+  padding: 0.5rem;
+  padding-bottom: 1rem;
+  text-align: center;
+}
+.about-page__bottom__inner {
+  display: inline-block;
+  text-align: left;
+  margin: auto;
+}
+.about-page__bottom__quote {
+  font-style: italic;
+}
+.about-page__bottom__author {
+  
 }
 .about-page__title {
   font-size: 2.5em;
