Add entried to TODO Fix spelling errors Add empty line to end of some text files (if they had none) Remove empty line from some text files (if they had more than one)

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -31,7 +31,7 @@ body {
   font-family: var(--theme__font-family);
 }
 
-/* Measure elements by the outline of their border instaed of by their content */
+/* Measure elements by the outline of their border instead of by their content */
 :root {
   box-sizing: border-box;
 }
