--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -750,6 +750,84 @@ body {
 
 
 
+/* ------ Playlist ------ */
+.playlist-page {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+.playlist-list__create-playlist,
+.playlist-list__create-playlist * {
+  cursor: pointer;
+  user-select: none;
+}
+
+/* PlaylistList */
+.playlist-list {
+  background-color: var(--theme__background-color);
+  /* --height | Height of list items (in pixels) */
+}
+/* Playlist-List-Item */
+.playlist-list-item {
+  /* Pimp */
+  list-style: none;
+  background-color: var(--theme__background-color);
+  color: #aaa;
+}
+.playlist-list-item:nth-child(2n) {
+  /* Pimp */
+  background-color: #1e1e1f;
+}
+.playlist-list-item:hover {
+  /* Pimp */
+  background-color: #3c3c41;
+}
+.playlist-list-item--selected {
+  /* Pimp */
+  background-color: #791c76;
+  color: #cecece;
+}
+.playlist-list-item--selected:hover {
+  /* Pimp */
+  background-color: #a72aa2;
+  color: #e6e6e6;
+}
+/* Playlist-List-Item Head */
+.playlist-list-item__head {
+  padding: 0.1rem;
+  padding-left: 0.5rem;
+}
+.playlist-list-item__head > * {
+  display: inline-block;
+  user-select: none;
+}
+.playlist-list-item__head:hover {
+  /* Pimp */
+  color: #e6e6e6;
+  cursor: pointer;
+}
+.playlist-list-item__head__title {
+  font-weight: bold;
+}
+.playlist-list-item__head__divider {
+  padding: 0 0.2rem;
+}
+.playlist-list-item__head__author {
+  font-style: italic;
+}
+/* Playlist-List-Item Content */
+.playlist-list-item__content {
+  max-height: 0; /* Overriden with JavaScript when expanded */
+  overflow: hidden;
+  transition: max-height 0.2s ease-in-out;
+  /* Pimp */
+  background-color: #242425;
+}
+.playlist-list-item__content__inner {
+  padding: 0.4rem;
+}
+
+
 /** ------ Config ------ */
 .config-page {
   width: 100%;
