Add "skipConfirm" prop to ConfimButton, if its set to true then the whole "confirm step" will be skipped and so "onConfirm" will be called as soon as the button is clicked the first time Make "Discard" button on playlist items at PlaylistPage skip confirm if nothing has been changed yet Make an appropriate cursor be shown when hovering over the head of a playlist item

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -838,15 +838,17 @@ body {
 .playlist-list-item__head {
   padding: 0.1rem;
   padding-left: 0.5rem;
+  cursor: pointer;
+}
+.playlist-list-item--editing .playlist-list-item__head {
+  cursor: default;
+}
+.playlist-list-item__head:hover {
+  color: #e6e6e6;
 }
 .playlist-list-item__head > * {
   display: inline-block;
   user-select: none;
-}
-.playlist-list-item__head:hover {
-  /* Pimp */
-  color: #e6e6e6;
-  cursor: pointer;
 }
 .playlist-list-item__head__title {
   font-weight: bold;
@@ -856,6 +858,10 @@ body {
 }
 .playlist-list-item__head__author {
   font-style: italic;
+}
+.playlist-list-item--editing .playlist-list-item__head__title, 
+.playlist-list-item--editing .playlist-list-item__head__author {
+  cursor: pointer;
 }
 /* Playlist-List-Item Content */
 .playlist-list-item__content {
