Make the launcher automatically create a "Playlists" folder if it is not found Make "PlaylistPage" show an error message if it failed to load the playlists folder

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -795,6 +795,13 @@ body {
   height: 100%;
   overflow: auto;
 }
+.playlist-page__message {
+  padding: 1rem;
+  text-align: center;
+}
+.playlist-page__message h2 {
+  margin-bottom: 0.2rem;
+}
 .playlist-list__create-playlist,
 .playlist-list__create-playlist * {
   cursor: pointer;
